tests/fixtures/invalid/str_bitand_str.py
# Cannot bitwise AND Str and Str
x: str = "hello" & "hello"
